# crewai-projects

automate_event_planning/: README.md  crewai_flow.html  event_planning.txt  pyproject.toml
automate_event_planning/src/automate_event_planning/: main.py
automate_event_planning/src/automate_event_planning/crews/poem_crew/: poem_crew.py
automate_event_planning/src/automate_event_planning/crews/poem_crew/config/: agents.yaml  tasks.yaml
customer_compaign/: README.md  pyproject.toml  response.txt
customer_compaign/src/customer_compaign/: main.py
customer_compaign/src/customer_compaign/crews/support_crew/: support_crew.py
customer_compaign/src/customer_compaign/crews/support_crew/config/: agents.yaml  tasks.yaml
customer_compaign/src/customer_compaign/crews/support_crew/instructions/: lead_profiling.txt  outreach_guidelines.txt
customer_compaign/src/customer_compaign/tools/: custom_tool.py
customer_queries/: .env  pyproject.toml
customer_queries/src/customer_queries/: __init__.py  main.py
customer_support/: README.md  crewai_flow.html  customer_support_response.txt  pyproject.toml
customer_support/src/customer_support/: main.py
customer_support/src/customer_support/crews/poem_crew/: poem_crew.py
customer_support/src/customer_support/crews/poem_crew/config/: agents.yaml  tasks.yaml
event_planning/: README.md  pyproject.toml
event_planning/src/event_planning/: main.py
event_planning/src/event_planning/crews/poem_crew/: poem_crew.py
financial_analysis/: crewai_flow.html  financial_analysis.md  financial_analysis.txt  pyproject.toml
financial_analysis/src/financial_analysis/: main.py
financial_analysis/src/financial_analysis/crews/poem_crew/: poem_crew.py
financial_analysis/src/financial_analysis/crews/poem_crew/config/: agents.yaml  tasks.yaml
job_application/: README.md  job_application.txt  pyproject.toml
job_application/src/job_application/: main.py
job_application/src/job_application/crews/job_application_crew/: fake_resume.md  job_applicaion_crew.py
job_application/src/job_application/crews/job_application_crew/config/: agents.yaml  tasks.yaml
tech_innovator/: README.md  pyproject.toml
tech_innovator/config/: agents.yaml  tasks.yaml
tech_innovator/src/tech_innovator/: main.py
tech_innovator/src/tech_innovator/crews/: __init__.py
tech_innovator/src/tech_innovator/crews/Marketing_strategy/: __init__.py  marketing_strategy_crew.py
tech_innovator/src/tech_innovator/crews/Marketing_strategy/config/: agents.yaml  tasks.yaml
tech_innovator/src/tech_innovator/crews/content_development/: __init__.py  content_development_crew.py
tech_innovator/src/tech_innovator/crews/content_development/config/: agents.yaml  tasks.yaml
