[project]
name = "customer_compaign"
version = "0.1.0"
description = "customer_compaign using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai-tools>=0.33.0",
    "crewai[tools]>=0.100.1,<1.0.0",
]

[project.scripts]
kickoff = "customer_compaign.main:kickoff"
plot = "customer_compaign.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
